--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="./public/shoppingcart_77968.svg" href="carrito" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Carrito de compras - Steckler</title>
+    <title>Panaderia Doña Pepa</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script src="/path/to/your/bundle.js"></script>
   </body>
 </html>
