--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="/path/to/your/bundle.js"></script>
+    <!-- Vite will automatically inject the necessary script tags -->
   </body>
 </html>
